--- a/CSCAssignment2/Views/Talents/UpdateTalent.cshtml
+++ b/CSCAssignment2/Views/Talents/UpdateTalent.cshtml
@@ -1,5 +1,149 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿<body>
+    <h1></h1>
+    <h2>Edit Talent</h2>
+    <form id="dataForm">
+        <div class="form-group form-group-lg col-md-12">
+            <label for="fullNameInput">Talent Name</label>
+            <br />
+            <input type="text" class="form-control" id="nameInput" name="nameInput" />
+        </div>
+        <div class="form-group form-group-lg col-md-12">
+            <label for="staffIdInput">
+                Short Name
+            </label>
+            <br />
+            <input type="text" class="form-control" id="shortNameInput" name="shortNameInput" />
+        </div>
+        <div class="form-group form-group-lg col-md-12">
+            <label for="departmentInput">
+                Bio
+            </label>
+            <br />
+            <input type="text" class="form-control" id="bioInput" name="bioInput" />
+        </div>
+
+        <div class="form-group form-group-lg col-md-12">
+            <label for="roleInput">
+                Reknown
+            </label>
+            <input type="text" class="form-control" id="reknownInput" name="reknownInput" />
+
+        </div>
+
+        <div class="form-group col-md-12">
+            <div>
+                <button type="button" class="btn btn-light"
+                        onclick="location.href='/Talents/ViewTalents'">
+                    Cancel
+                </button>
+                <button type="reset" id="resetButton" class="btn btn-secondary">
+                    Reset
+                </button>
+                <input type="button" name="btn" value="Update" id="updateButton" data-toggle="modal" data-target="#confirm-submit" class="btn btn-primary" />
+            </div>
+        </div>
+    </form>
+
+    <div class="modal fade" id="confirm-submit" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body w-100 text-center">
+                    <!-- We display the details entered by the user here -->
+                    <h1><strong class="text-dark">Edit Talent</strong></h1>
+                    <br />
+                    <h4 id="modalName" style="margin: 0 auto;"></h4>
+                    <br />
+                    <h4 id="modalShortName" style="margin: 0 auto;"></h4>
+                    <br />
+                    <h4 id="modalBio" style="margin: 0 auto;"></h4>
+                    <br />
+                    <h4 id="modalReknown" style="margin: 0 auto;"></h4>
+                    <br />
+                    <br />
+                    <br>
+                    <button type="button" class="btn btn-lg mr-5 btn-outline-dark" data-dismiss="modal">Cancel</button>
+                    <button id="modalUpdateButton" type="submit" class="btn btn-danger btn-lg" data-dismiss="modal">Create</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
+@section Scripts {
+
+    <script>
+        //Declare a JavaScript constant, ID.
+        //This JavaScript constant will contain the numeric id value
+        //which will be extracted from the address bar.
+        const ID = getIdFromAddressBar();
+        loadTalent();
+
+        //Declare a named function, getIdFromAddressBar
+        function getIdFromAddressBar() {
+            let urlArray = window.location.href.split('/');
+            let id = urlArray[urlArray.length - 1];
+            return id;
+        };//End of getIdFromAddressBar
+
+        function loadTalent() {
+            $.ajax({
+                method: 'GET',
+                url: '/API/Talents/GetTalent/' + ID,
+            }).done(function (data) {
+                // append values into the text fields
+                document.getElementById("nameInput").value = data.name;
+                document.getElementById("shortNameInput").value = data.shortName;
+                document.getElementById("bioInput").value = data.bio;
+                document.getElementById("reknownInput").value = data.reknown;
+            });//end of ajax().done();
+        }//End of loadTalent
+
+        (function () {
+            jQuery('#updateButton').on('click', function () {
+                /* when the button in the form, display the entered values in the modal */
+                $('#modalName').text($('#nameInput').val());
+                $('#modalShortName').text($('#shortNameInput').val());
+                $('#modalBio').text($('#bioInput').val());
+                $('#modalReknown').text($('#reknownInput').val());
+            });
+        })();
+
+        function WebFormData(inName, inShortName, inBio, inReknown) {
+            this.name = inName;
+            this.shortName = inShortName;
+            this.bio = inBio;
+            this.reknown = inReknown;
+        }
+
+        $('#modalUpdateButton').on('click', function () {
+            let collectedName = jQuery('#nameInput').val();
+            let collectedShortName = jQuery('#shortNameInput').val();
+            let collectedBio = jQuery('#bioInput').val();
+            let collectedReknown = jQuery('#reknownInput').val();
+
+            //Create a object, webFormData by using WebFormData class
+            let webFormData = new WebFormData(collectedName,
+                collectedShortName, collectedBio, collectedReknown);
+
+            $.ajax({
+                method: 'PUT',
+                url: '/API/Talents/UpdateTalent/' + ID,
+                dataType: 'json',
+                contentType: 'application/x-www-form-urlencoded;',
+                data: webFormData
+            }).done(function (data) {
+                alert(data.message)
+
+                setTimeout(function () {
+                    window.location.href = "/Talents/ViewTalents";
+                }, 1000);
+            }).fail(function (data) {
+                if (data.responseJSON) {
+                    alert(data.responseJSON.message);
+                } else {
+                    alert("Error");
+                }
+            });
+        });//end of $('#updateButton').on('click'. anonymous function)
+    </script>
 }
