--- a/CSCAssignment2/Views/Home/Index.cshtml
+++ b/CSCAssignment2/Views/Home/Index.cshtml
@@ -12,38 +12,38 @@
         <br />
         @if (identity.IsAuthenticated)
         {
-                <h1>Start using our talent service now!</h1>
-                <h3>
+            <h1>Start using our talent service now!</h1>
+            <h3>
                 Welcome back @identity.FindFirst("fullName").Value
             </h3>
-                <div id="loader" class="loader loader-default is-active "></div>
+            <div id="loader" class="loader loader-default is-active "></div>
 
-                <div class="text-right">
-                    <a href="/Cart/Index/@identity.FindFirst("userid").Value" type="button" class="btn btn-primary btn-lg" style="margin:5px;">Upgrade to Comment!<span></span></a>
-                    <button type="button" class="btn btn-primary btn-lg" onclick="location.href='@Url.Action("CreateTalent", "Talents")'" style="margin:5px;">Create Talent +</button>
-                </div>
-                <br />
+            <div class="text-right">
+                <a href="/Cart/Index/@identity.FindFirst("userid").Value" type="button" class="btn btn-primary btn-lg" style="margin:5px;">Upgrade to Comment!<span></span></a>
+                <button type="button" class="btn btn-primary btn-lg" onclick="location.href='@Url.Action("CreateTalent", "Talents")'" style="margin:5px;">Create Talent +</button>
+            </div>
+            <br />
 
-                <table id="TheTalentsTable" class="display">
-                    <thead>
-                        <tr>
-                            <th>Talent Name</th>
-                            <th>Image Profile</th>
-                            <th>Talent Bio</th>
-                            <th>Reknown</th>
-                            <th>Short Name</th>
-                            <th></th>
-                            <th></th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
+            <table id="TheTalentsTable" class="display">
+                <thead>
+                    <tr>
+                        <th>Talent Name</th>
+                        <th>Image Profile</th>
+                        <th>Talent Bio</th>
+                        <th>Reknown</th>
+                        <th>Short Name</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
 
-                <div id="update"></div>
+            <div id="update"></div>
 
-                <div>
+            <div>
                 <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
             </div>
         }
@@ -55,6 +55,22 @@
                 For non registered users/not logged on users. You only have limited access.
             </h3>
 
+            <br />
+
+            <div id="loader" class="loader loader-default is-active "></div>
+            <table id="WithoutLoginTable" class="display">
+                <thead>
+                    <tr>
+                        <th>Talent Name</th>
+                        <th>Image Profile</th>
+                        <th>Talent Bio</th>
+                        <th>Reknown</th>
+                        <th>Short Name</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
         }
     </div>
 
@@ -62,6 +78,7 @@
     <script>
         let deleteId = 0; // variable to store id for delete api url
         loadTalents();
+        loadWithoutLogin();
 
         function loadTalents() {
             $.ajax({
@@ -111,6 +128,42 @@
                                     return '<a class="btn btn-danger btn-lg" style="border-radius: 8px;" type="button" onclick="deleteModal(' + data + ')" data-toggle="modal" data-target="#confirm-delete" title="Delete"><i class="fa fa-trash" style="color: white;"></i></a>'; //Jinwah
                                 }
                             }
+                        ],
+                        "info": true,
+                        lengthMenu: [[5, 10, 25, 50, -1], [5, 10, 25, 50, "All"]],
+                        pageLength: 10
+                    });
+                })
+            }); //End of ajax().done() method
+        }//end of loadTalents
+
+        function loadWithoutLogin() {
+            $.ajax({
+                method: 'GET',
+                url: '/api/talents/',
+                beforeSend: function () {
+                    $("#loader").show();
+                },
+                //Exit Loader when request is complete
+                complete: function () {
+                    $("#loader").hide();
+                },
+                success: (function (data) {
+                    var urlForCloudImage = "https://testbucketcscnew1.s3.amazonaws.com/";
+                    tableData = $('#WithoutLoginTable').DataTable({
+                        data: data,
+                        columns: [
+                            { data: 'talentName' },
+                            {
+                                data: 'talentUrl',
+                                "width": "3%",
+                                "render": function (data, type, row, meta) {
+                                    return '<img src=' + urlForCloudImage + data + ' />';
+                                }
+                            },
+                            { data: 'talentBio' },
+                            { data: 'talentReknown' },
+                            { data: 'talentshortName' }
                         ],
                         "info": true,
                         lengthMenu: [[5, 10, 25, 50, -1], [5, 10, 25, 50, "All"]],
